15th.built in filter.change showing vari at DTL

--- a/dj1th/firstapp/templates/firstapp/cheers.html
+++ b/dj1th/firstapp/templates/firstapp/cheers.html
@@ -13,7 +13,7 @@
     <h1> templates are working..</h1>
 
     <h3> good move...</h3>
-    <span>{{weekdays}}</span>
-    
+    <span>{{daydata | title}}</span>   <!-- title is built in filter.-->
+
 </body>
 </html>
