--- a/dj1th/firstapp/templates/firstapp/cheers.html
+++ b/dj1th/firstapp/templates/firstapp/cheers.html
@@ -1,19 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+{% extends 'base.html'%}
 
 
-   
-</head>
-<body>
-    <h1> templates are working..</h1>
+ {% block headblock %}
+ <span>Document</span>
+ {% endblock  %}
+
+
+{%block body%}
+   <h1> inheritence in templates are working..</h1>
 
     <h3> good move...</h3>
-    <span>{{daydata | title}}</span>   <!-- title is built in filter.-->
-
-</body>
-</html>
+    {%if daydata is not None%}
+    <span>{{daydata | title}} is exception.</span>   <!-- title is built in filter.-->
+    {%endif%}
+{%endblock%}
