--- a/dj1th/firstapp/templates/firstapp/htmlweek.html
+++ b/dj1th/firstapp/templates/firstapp/htmlweek.html
@@ -1,12 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block headblock %}
+Document
+{% endblock headblock %}
+
+{% block body %}
     <!-- using template tags not built in filter.-->
  
     {% for item in week %}
@@ -18,5 +16,4 @@
     {% endfor %}
    
     <h4>and end.</h4>
-</body>
-</html>
+{% endblock body %}
