20th use variables at include tag by *with vari=value*

--- a/dj1th/firstapp/templates/firstapp/cheers.html
+++ b/dj1th/firstapp/templates/firstapp/cheers.html
@@ -2,8 +2,8 @@
 
 
  {% block headblock %}
- {% include 'includes/header_bar.html' %}
- <span>Document</span>
+ {% include 'includes/header_bar.html' with dayinfo="7days at cheers.html" %}
+ <p>Document and$$$$$$$$$$ {{dayinfo}}$$$$$$$$$</p>
  {% endblock  %}
 
 
