--- a/dj1th/templates/includes/header_bar.html
+++ b/dj1th/templates/includes/header_bar.html
@@ -1,1 +1,1 @@
-<a href="htmlweeklsdfj"> go to days and this is item for use at header:***{{week}}***</a>
+<a href="htmlweeklsdfj"> go to days and this is item for use at header:***{{week}} and {{dayinfo}}***</a>
