--- a/dj1th/templates/base.html
+++ b/dj1th/templates/base.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% block headblock %}
             default headblock
-    {% endblock headblock %}
+    {% endblock  %}
 </head>
 <body>
     {% block body %}
