--- a/dj1th/firstapp/templates/firstapp/cheers.html
+++ b/dj1th/firstapp/templates/firstapp/cheers.html
@@ -1,7 +1,8 @@
 {% extends 'base.html'%}
-
+{%load static %}
 
  {% block headblock %}
+ <link rel="stylesheet" href="{% static 'firstapp/firstapp.css'%}" >
  {% include 'includes/header_bar.html' with dayinfo="7days at cheers.html" %}
  <p>Document and$$$$$$$$$$ {{dayinfo}}$$$$$$$$$</p>
  {% endblock  %}
