24th.main static file and folder-add STATICFILES_DIRS=[BASE_DIR / 'STATICPATHFOLDER',],use <link rel=? href=?   ,,, before all make static folder beside db.sqlite and manage.py

--- a/dj1th/templates/base.html
+++ b/dj1th/templates/base.html
@@ -1,3 +1,7 @@
+{%load  static %}
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,6 +11,7 @@
     {% block headblock %}
             default headblock
     {% endblock  %}
+    <link  rel="stylesheet"  href="{%static "style.css"%}" >
 </head>
 <body>
     {% block body %}
